docs/src/components/Demo/Demo.css
@import 'docs/src/css/custom-media.css';

@layer components {
  .DemoRoot {
    --demo-radius: var(--radius-12);
    border: 1px solid var(--gray-c2);
    border-radius: var(--demo-radius);
    margin-bottom: var(--space-24);
  }

  .DemoPlaygroundExternalLink {
    position: absolute;
    top: 0.75rem;
    right: 1.125rem;
  }

  .DemoPlayground {
    position: relative;

    background-color: var(--color-content);
    border-top-left-radius: calc(var(--demo-radius) - 1px);
    border-top-right-radius: calc(var(--demo-radius) - 1px);

    /* Scroll */
    overflow: auto hidden;
    overscroll-behavior-x: contain;
    scrollbar-width: thin;

    /* Scroll containers may be focusable */
    &:focus-visible {
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
      z-index: 1;
    }
  }

  /* A separate element for the padding to work when there is horizontal scroll */
  .DemoPlaygroundInner {
    padding: 2rem 1.5rem;
    min-height: 8rem;

    /* Make sure contents aren't squashed smaller than their natural width */
    min-width: fit-content;

    /* Center the contents vertically */
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .DemoToolbar {
    box-sizing: border-box;
    position: relative;
    z-index: 1;
    font-size: var(--font-size-13);
    line-height: 1.25rem;
    white-space: nowrap;
    color: var(--gray-t2);
    background-clip: padding-box;
    display: flex;
    align-items: end;
    gap: 1.5rem;
    height: 2.25rem;
    padding: 0 0 0 0.5rem;
    -webkit-user-select: none;
    user-select: none;

    /* Scroll */
    overflow: auto hidden;
    overscroll-behavior-x: contain;
    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }

    /* Scroll containers may be focusable */
    &:focus-visible {
      position: relative;
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
      z-index: 1;
    }
  }

  .DemoToolbarActions {
    position: relative;
    right: 0;
    display: flex;
    align-items: center;
    margin-left: auto;
    padding-right: 0.5rem;
    height: 100%;
    gap: var(--space-4);

    /* Apply sticky only on wider viewports to avoid actions taking up most of it */
    @media (min-width: 48rem) {
      position: sticky;
      padding-left: 0.75rem;

      &::before {
        content: '';
        position: absolute;
        inset: 0 0 1px;
        border-radius: inherit;
        background-color: var(--color-content);
        pointer-events: none;
      }

      &::after {
        content: '';
        position: absolute;
        top: 0;
        bottom: 1px;
        left: -24px;
        width: 24px;
        background: linear-gradient(to right, transparent, var(--color-content));
        pointer-events: none;
      }
    }
  }

  .DemoTabsList {
    display: flex;
    align-self: flex-end;
    gap: 0.125rem;
  }

  .DemoTab {
    font-family: var(--font-mono);
    position: relative;
    z-index: 0;
    outline: 0;
    height: 2rem;
    padding-inline: 0.5rem;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
    border-top: 1px solid transparent;
    border-right: 1px solid transparent;
    border-left: 1px solid transparent;
    border-top-left-radius: var(--radius-8);
    border-top-right-radius: var(--radius-8);
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;

    > span {
      position: relative;
    }

    @media (hover: hover) {
      &:hover:not([data-active]) {
        border-color: var(--gray-c1);

        &::before {
          content: '';
          position: absolute;
          inset: 0 0 1px;
          border-top-left-radius: calc(var(--radius-8) - 1px);
          border-top-right-radius: calc(var(--radius-8) - 1px);
          background-color: var(--gray-c1);
          pointer-events: none;
        }
      }
    }

    &[data-active] {
      border-color: var(--gray-c2);
      background-color: var(--gray-s1);

      &::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 1px;
        background-color: var(--gray-s1);
        pointer-events: none;
      }
    }

    &:focus-visible {
      outline: 2px solid var(--gray-t2);
      outline-offset: -2px;

      &::after {
        content: none;
      }
    }
  }

  .DemoCodeBlockCollapsible {
    position: relative;
    display: flex;
    flex-direction: column;

    &:not([data-open]) {
      .DemoCollapseButton {
        position: absolute;
        inset: 0;
        align-items: flex-end;
        padding-bottom: 0.75rem;
      }
    }

    &[data-open] {
      .DemoCollapseButton {
        position: sticky;
        bottom: 0;
        align-self: stretch;
        align-items: flex-start;
        padding-top: 0.75rem;
        padding-bottom: 0.75rem;
      }
    }
  }

  .DemoCodeBlockRoot {
    display: flex;
    flex-direction: column;
    position: relative;
    outline: 0;
    border-top: 1px solid var(--gray-c2);
    border-bottom-left-radius: var(--demo-radius);
    border-bottom-right-radius: var(--demo-radius);
    margin-top: -1px;
    background-color: var(--gray-s1);

    &[data-closed] {
      &::before {
        content: '';
        position: absolute;
        z-index: 1;
        pointer-events: none;
        height: 100%;
        max-height: 6rem;
        bottom: 0;
        left: 0;
        right: 0;
        border-bottom-left-radius: calc(var(--demo-radius) - 1px);
        border-bottom-right-radius: calc(var(--demo-radius) - 1px);
        background: linear-gradient(
          to bottom,
          transparent 20%,
          color-mix(in srgb, var(--gray-s1), transparent 20%) 100%
        );
      }
    }
  }

  .DemoCodeBlockViewport {
    &[data-has-overflow-x] {
      /* Prevent Chrome/Safari page navigation gestures when scrolling horizontally */
      overscroll-behavior-x: contain;
    }

    /* Max height for code blocks, if we ever want to recover this (https://github.com/mui/base-ui/pull/1187) */
    /* max-height: clamp(8.75lh + 0.5rem, 80vh, 23.75lh + 0.5rem); */

    &[data-closed] {
      overflow: hidden;
      max-height: calc(8.75lh + 0.5rem); /* Show almost 9 code lines plus top padding */
    }
    &[data-closed] code .frame:not([data-frame-type]),
    &[data-closed] code .frame[data-frame-type='highlighted-unfocused'],
    &[data-closed] code .frame[data-frame-type='focus-unfocused'] {
      display: none;
    }
  }

  .DemoSourceBrowser {
    position: relative;
    font-size: 0.8125rem; /* 13px */
    line-height: 1.25rem; /* 20px */
    cursor: text;
    display: flex;

    & pre {
      /* Different fonts may introduce vertical align issues */
      display: flex;
      /* Make sure selection highlight spans full container width in Safari */
      flex-grow: 1;
    }

    & code {
      padding: 0.5rem 0;
    }

    & code .frame {
      display: block;
      padding-left: 0.75rem;
      padding-right: 0.75rem;
    }

    & code .frame[data-lined] {
      display: block;
      white-space: normal;
      padding-left: 0;
      padding-right: 0;
    }

    & code .frame[data-lined] .line {
      display: block;
      white-space: pre;
      padding-left: 0.75rem;
      padding-right: 0.75rem;
    }
  }

  .DemoCodeBlockCopyButton {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
    background-color: color-mix(in srgb, var(--gray-s1), transparent 10%);

    @media (--md) {
      background-color: transparent;
      box-shadow: none;
    }
  }

  .DemoCollapseButton {
    box-sizing: border-box;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    border: none;
    padding: 0;
    color: var(--color-foreground);
    background: transparent;
    font-family: inherit;
    font-size: var(--font-size-13);
    font-weight: 500;
    line-height: 1;
    vertical-align: top;
    cursor: default;
    z-index: 2;
    -webkit-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: transparent;
    appearance: none;

    &[data-sticky] {
      z-index: 1;
    }

    &:focus-visible {
      outline: 0;
    }

    &:focus-visible .DemoCollapseButtonVisual {
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
    }
  }

  .DemoCollapseButtonVisual {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: var(--space-8);
    height: var(--space-28);
    padding-inline: var(--space-12);
    border-radius: var(--radius-pill);
    background: linear-gradient(to bottom, hsl(0deg 0% 0% / 8%), hsl(0deg 0% 0% / 16%));
    white-space: nowrap;
    pointer-events: none;
    z-index: 0;

    &::before {
      content: '';
      position: absolute;
      z-index: -1;
      inset: 1px;
      border-radius: var(--radius-pill);
      background: linear-gradient(to bottom, white 25%, hsl(0deg 0% 98%));
      pointer-events: none;
      box-shadow:
        inset 0 0 0 1px white,
        0 1px 1px hsl(0deg 0% 0% / 4%),
        0 1px 2px hsl(0deg 0% 0% / 4%),
        0 2px 4px -2px hsl(0deg 0% 0% / 4%);
    }

    @media (hover: hover) {
      .DemoCollapseButton:hover & {
        background: linear-gradient(to bottom, hsl(0deg 0% 0% / 16%), hsl(0deg 0% 0% / 32%));
      }
    }

    @media (prefers-color-scheme: dark) {
      background: linear-gradient(to bottom, hsl(0deg 0% 100% / 16%), hsl(0deg 0% 100% / 24%));

      &::before {
        background: linear-gradient(to bottom, var(--gray-c2), var(--gray-c1));
        box-shadow:
          0 1px 1px hsl(0deg 0% 0% / 16%),
          0 1px 2px hsl(0deg 0% 0% / 16%),
          0 2px 4px -2px hsl(0deg 0% 0% / 24%);
      }

      @media (hover: hover) {
        .DemoCollapseButton:hover & {
          background: linear-gradient(to bottom, hsl(0deg 0% 100% / 24%), hsl(0deg 0% 100% / 36%));
        }
      }
    }
  }
}

